--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-h1 { color: #0000ff;text-align: center;font-size: 40px;}
-p {text-align: center; font-size: 30px;}
-span {color: #ff0000;}
+h1 {
+    color: #0000ff;
+    text-align: center;
+    font-size: 40px;
+}
+
+p {
+    text-align: center;
+    font-size: 30px;
+}
+
+span {
+    color: #ff0000;
+}
